# detectron2_ros

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  requirements.txt  ros_entrypoint.sh  run.sh  setup.py
scripts/: action_client.py  action_server.py  detectron2_service.py  detectron2_service_client.py  service.py
src/detectron2_ros/: detectron2_ros.py  predictor.py
